--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,
+  initial-scale=1,minimum-scale=1,maximum-scale=1,
+  user-scalable=0,viewport-fit=cover,minimal-ui" name="viewport">
+  <meta content="yes" name="apple-mobile-web-app-capable" />
+  <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style" />
+  <meta content="application" name="browsermode">
+  <meta content="yes" name="full-screen" />
+  <meta content="true" name="x5-fullscreen" />
+  <meta content="app" name="x5-page-mode" />
+  <meta content="true" name="360-fullscreen" />
+  <link href="<%= BASE_URL %>favicon.ico" rel="icon">
+  <title>morney-2</title>
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
