更改项目名字

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <meta content="app" name="x5-page-mode" />
   <meta content="true" name="360-fullscreen" />
   <link href="<%= BASE_URL %>favicon.ico" rel="icon">
-  <title>morney-2</title>
+  <title>蓝猫记账</title>
 </head>
 <body>
 <div id="app"></div>
